# Webserv

./: CMakeLists.txt  Makefile  Makefile_original  README.md  main.cpp  setup.sh  start.sh  webserv
configs/: _default.conf  clion_default.conf  default.conf
simple_client_server/: README.md  client.c  server.c  stream_server.c
sockets_structures/: s_socket.cpp  s_socket.hpp
srcs/: CMakeLists.txt  Webserv.hpp  assign_server_to_clients.cpp  assign_server_to_socket.cpp  callback.cpp  callback.hpp  callback_utils.cpp  core.cpp  ft_select.cpp  init_clients.cpp  init_socket_list.cpp  is_fd_ready.cpp  launch_server.cpp  main.cpp  parse_buffer.cpp  parse_header_functions.cpp  parser.cpp  read_headers.cpp  remove_client.cpp  reset_socket.cpp  similar_get_req.cpp  taskqueue.hpp  web.cpp  webserv.cpp  webserv.hpp
srcs/classes/: Callback.cpp  Callback.hpp  Callback_cgi.cpp  Callback_chunk.cpp  Callback_delete.cpp  Callback_error_request.cpp  Callback_get.cpp  Callback_head.cpp  Callback_options.cpp  Callback_post.cpp  Callback_put.cpp  Callback_trace.cpp  Callback_utils.cpp  Location.cpp  Location.hpp  Server.cpp  Server.hpp  TaskQueue.cpp  TaskQueue.hpp  Tmpfile.cpp  Tmpfile.hpp
srcs/data_structures/: Address.cpp  Address.hpp  RequestHeader.cpp  RequestHeader.hpp  Socket.cpp  Socket.hpp
srcs/read_headers/: cut_buffer.cpp  cut_buffer_ret.cpp  find_str_buffer.cpp  flush_crlf.cpp  get_header.cpp  init_maps.cpp  parse_header.cpp  parse_header_functions.cpp  parse_status_line.cpp  read_headers.cpp  read_headers.hpp
srcs/utils/: cgitohttp.cpp  concate_list_str.cpp  ft_basename.cpp  ft_dirname.cpp  ft_error.cpp  gen_listening.cpp  get_err_page.cpp  get_status_line.cpp  hextodec.cpp  is_buffer_crlf.cpp  is_fd_ready.cpp  lststr_to_strcont.cpp  lststr_to_strs.cpp  remove_client.cpp  strcont_to_str.cpp  substr.cpp  utils.hpp
utils/: ft_error.cpp  utils.hpp
www/: 400.html  404.html  countdown.php  hello_world.php  index.html  test.py  webserv.html
